[workspace]
resolver = "3"
# members = ["attestation_client", "http_service"]
members = ["http_service"]

[workspace.package]
edition = "2024"
rust-version = "1.93"
readme = "./README.md"
homepage = "https://www.taceo.io"
repository = "https://github.com/TaceoLabs/"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
axum = { version = "0.8" }
axum-extra = "0.12.5"
bytes = "1"
eyre = { version = "0.6" }
futures-util = { version = "0.3", default-features = false }
headers = "0.4"
http-body-util = "0.1"
hyper = { version = "1" }
hyper-util = { version = "0.1" }
reqwest = { version = "0.13.2" }
serde_bytes = "0.11"
serde_cbor = "0.11.2"
tokio = { version = "1" }
tokio-tungstenite = "0.28.0"
tower = { version = "0.5" }
tower-http = { version = "0.6" }
tracing = "0.1"
tracing-subscriber = "0.3"

# This profile can be used for CI in pull requests.
[profile.ci-dev]
inherits = "dev"
opt-level = 1
debug = true
incremental = false

[profile.profiling]
inherits = "bench"
debug = true
lto = "thin"
