[package]
name = "http_service"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
axum = { workspace = true, features = ["ws"] }
axum-extra = { workspace = true, features = ["typed-header"] }
eyre.workspace = true
futures-util = { workspace = true, default-features = false, features = [
  "sink",
  "std"
] }
headers.workspace = true
reqwest.workspace = true
serde_bytes.workspace = true
serde_cbor.workspace = true
tokio = { workspace = true, features = [
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tokio-macros",
] }
tower-http = { workspace = true, features = ["fs", "trace"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
