[package]
name = "http_service"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
axum = { workspace = true, features = ["ws"] }
axum-extra = { workspace = true, features = ["typed-header"] }
bytes.workspace = true
eyre.workspace = true
futures-util = { workspace = true, default-features = false, features = [
  "sink",
  "std"
] }
headers.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["client", "http1"] }
hyper-util = { workspace = true, features = ["client-legacy", "http1", "tokio"] }
reqwest.workspace = true
serde_bytes.workspace = true
serde_cbor.workspace = true
tokio = { workspace = true, features = ["full", "net"] }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["fs", "trace"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
